--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 **/.git* annex.largefiles=nothing
 CHANGELOG.md annex.largefiles=nothing
 README.md annex.largefiles=nothing
+* annex.largefiles=((mimeencoding=binary)and(largerthan=100kb))
