--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 * annex.backend=MD5E
 **/.git* annex.largefiles=nothing
-* annex.largefiles=((mimeencoding=binary)and(largerthan=100kb))
+* annex.largefiles=((mimeencoding=binary)and(largerthan=50mb))
